<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:minWidth="320dp"
    android:orientation="horizontal"
    android:weightSum="4">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/_8dp"
        android:layout_marginHorizontal="@dimen/_5dp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_8dp">

        <ImageView
            android:id="@+id/cameraIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_of_camera"
            android:padding="@dimen/_8dp"
            android:src="@drawable/ic_camera_alt" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/_8dp"
        android:layout_marginHorizontal="@dimen/_5dp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_8dp">

        <ImageView
            android:id="@+id/galleryIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_of_gallery"
            android:padding="@dimen/_8dp"
            android:src="@drawable/ic_image" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/_8dp"
        android:layout_marginHorizontal="@dimen/_5dp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_8dp">

        <ImageView
            android:id="@+id/pdfIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_of_pdf"
            android:padding="@dimen/_8dp"
            android:src="@drawable/ic_pdf" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/_8dp"
        android:layout_marginHorizontal="@dimen/_5dp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_8dp">

        <ImageView
            android:id="@+id/voiceIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_of_mic"
            android:padding="@dimen/_8dp"
            android:src="@drawable/ic_mic" />

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>