<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F6F8"
    android:padding="@dimen/_16dp"
    tools:context="com.crudgroup.chat.presentation.chat.ChatFragment">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:clickable="true"
        android:contentDescription="@string/image_back"
        android:focusable="true"
        android:background="@drawable/background_back"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/doctorImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/doctorImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/_12dp"
        app:layout_constraintBottom_toBottomOf="@id/backImage"
        app:layout_constraintStart_toEndOf="@id/backImage"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CornerSize50Percent"
        app:srcCompat="@drawable/ic_account"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="13dp" />

    <TextView
        android:id="@+id/doctorNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:fontFamily="@font/gilroy"
        android:textColor="@color/user_name_color"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@id/doctorImage"
        app:layout_constraintStart_toEndOf="@id/doctorImage"
        app:layout_constraintTop_toTopOf="@id/doctorImage"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/doctorOnlineTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/_5dp"
        android:fontFamily="@font/gilroy"
        android:textColor="@color/online_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/doctorNameTv"
        app:layout_constraintTop_toBottomOf="@id/doctorNameTv"
        tools:text="online" />

    <View
        android:id="@+id/doctorInfoContainer"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/doctorImage"
        app:layout_constraintEnd_toStartOf="@id/launchZoomIv"
        app:layout_constraintStart_toStartOf="@id/doctorImage"
        app:layout_constraintTop_toTopOf="@id/doctorImage" />

    <ImageView
        android:id="@+id/launchZoomIv"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/image_send"
        android:focusable="true"
        android:padding="@dimen/_12dp"
        android:src="@drawable/ic_video_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctorImage" />

    <FrameLayout
        android:id="@+id/emptyLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctorImage">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/im_app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_12dp"
            android:background="@drawable/bg_received_message"
            android:paddingHorizontal="@dimen/_12dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/first_question"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

    </FrameLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="contentEmptyChat, contentFullChat" />

    <include
        android:id="@+id/contentFullChat"
        layout="@layout/content_full_chat"
        android:visibility="gone" />

    <include
        android:id="@+id/contentEmptyChat"
        layout="@layout/content_empty_chat"
        android:visibility="gone"/>

    <View
        android:id="@+id/loadingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#59000000"
        android:padding="@dimen/_12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintTop_toTopOf="@id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>